--- a/nivell1/index.html
+++ b/nivell1/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Sprint 2</title>
 </head>
 <body>
-    <div class="container">
+  <div class="container">
+        <!-- Header -->
         <header class="d-flex flex-wrap justify-content-center py-4">
             <a class="navbar-brand d-flex align-items-center mb-3 mb-md-0 me-md-auto" href="#">
                 <img src="img/logo-bookmark.svg" alt="logo bookmark">
@@ -32,43 +33,106 @@
             <h1 class="display-5 fw-bold lh-1 mb-4">A Simple Bookmark Manager</h1>
             <p class="lead mb-4 text-black-50">A clean and simple interface to organize your favorite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Get in on Chrome</button>
-              <button type="button" class="btn btn-light btn-lg px-4">Get in on Firefox</button>
+              <button type="button" class="btn btn-primary shadow btn-lg px-4 me-md-2">Get in on Chrome</button>
+              <button type="button" class="btn btn-light shadow btn-lg px-4">Get in on Firefox</button>
             </div>
           </div>
         </div>
 
+        <!-- ** Features ** -->
         <div class="row px-4 py-4 text-center">
-          <h2 class="display-6 fw-bold pb-2">Features</h2>
-          <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4 text-black-50">Our aim is to make it quickly and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
-          </div>
-          <ul class="nav nav-tabs d-flex flex-wrap justify-content-center" id="myTab" role="tablist">
-            <li class="nav-item" role="presentation">
-              <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Simple Bookmarking</button>
-            </li>
-            <li class="nav-item" role="presentation">
-              <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Speedy Searching</button>
-            </li>
-            <li class="nav-item" role="presentation">
-              <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Easy Sharing</button>
-            </li>
-          </ul>
-          <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-              <h2>Bookmark in one click</h2>
-              <p>Organize your bookmarks however you like. Our simple drag and drop interface gives you complete control over how you manage your favourite sites.</p>
+            <h2 class="display-6 fw-bold pb-2">Features</h2>
+            <div class="col-lg-6 mx-auto">
+              <p class="lead mb-4 text-black-50">Our aim is to make it quickly and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
             </div>
-            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">02 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, magni?</div>
-            <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">03 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam iusto animi et quia nihil at voluptatem mollitia dolorem ad quas harum dolorum architecto qui voluptas praesentium reprehenderit impedit, dolore facere?</div>
-          </div>
         </div>
-    </div>
+        <ul class="nav nav-tabs d-flex flex-wrap justify-content-center" id="myTab" role="tablist">
+              <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Simple Bookmarking</button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Speedy Searching</button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Easy Sharing</button>
+              </li>
+        </ul>
+        <div class="row tab-content" id="myTabContent">
+            <div class="col-md-12 p-5">
+              <!-- Features Content 1 -->
+              <div class="row tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <div class="col-7 px-5">
+                  <img src="img/illustration-features-tab-1.svg" class="d-block mx-lg-auto img-fluid" loading="lazy">
+                </div>
+                <div class="col-5">
+                  <h3 class="display-6 fw-bold lh-1 mb-4">Bookmark in one click</h3>
+                  <p class="lead mb-4 text-black-50">Organize your bookmarks however you like. Our simple drag and drop interface gives you complete control over how you manage your favourite sites.</p>
+                  <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                    <button type="button" class="btn btn-primary shadow btn-lg px-4 me-md-2">More info</button>
+                  </div>
+                </div>
+                
+              </div>
+
+              <!-- Features Content 2 -->            
+              <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">02 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, magni?</div>
+              <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">03 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam iusto animi et quia nihil at voluptatem mollitia dolorem ad quas harum dolorum architecto qui voluptas praesentium reprehenderit impedit, dolore facere?</div>
+            </div>
+        </div>
+
+        <!-- Download -->
+        <div class="row row-cols-1 d-flex flex-wrap justify-content-center pb-5">
+
+          <div class="col-6 px-4 py-4 text-center">
+            <h2 class="display-6 fw-bold pb-2">Download the extension</h2>
+            <p class="lead mb-4 text-black-50">We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to prioritize.</p>
+          </div>
+          <div class="col-9">
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="card d-flex align-items-center pt-4 shadow border-0 text-center">
+                  <img src="img/logo-chrome.svg" class="card-img-top w-25" alt="Chrome Browser">
+                  <div class="card-body">
+                    <h3 class="card-title">Add to Chrome</h3>
+                    <p class="card-text text-black-50"><small>Minimum version 62</small></p>
+                    <img src="img/bg-dots.svg" class="img-fluid">
+                    <button type="button" class="btn btn-primary shadow btn-lg">Add & Install Extenstion</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4 pt-3">
+                <div class="card d-flex align-items-center pt-4 shadow border-0 text-center">
+                  <img src="img/logo-chrome.svg" class="card-img-top w-25" alt="Chrome Browser">
+                  <div class="card-body">
+                    <h3 class="card-title">Add to Chrome</h3>
+                    <p class="card-text text-black-50"><small>Minimum version 62</small></p>
+                    <img src="img/bg-dots.svg" class="img-fluid">
+                    <button type="button" class="btn btn-primary shadow btn-lg">Add & Install Extenstion</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4 pt-5">
+                <div class="card d-flex align-items-center pt-4 shadow border-0 text-center">
+                  <img src="img/logo-chrome.svg" class="card-img-top w-25" alt="Chrome Browser">
+                  <div class="card-body">
+                    <h3 class="card-title">Add to Chrome</h3>
+                    <p class="card-text text-black-50"><small>Minimum version 62</small></p>
+                    <img src="img/bg-dots.svg" class="img-fluid">
+                    <button type="button" class="btn btn-primary shadow btn-lg">Add & Install Extenstion</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+  </div>
 
     <!-- Bootstrap JavaScript -->
     <!-- <script src="./node_modules/bootstrap/js/dist/*.js"></script>  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+<!--     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+ -->
     
 </body>
 </html>
