--- a/nivell1/index.html
+++ b/nivell1/index.html
@@ -39,7 +39,7 @@
           </div>
         </div>
 
-        <!-- ** Features ** -->
+        <!-- Features -->
         <div class="row px-4 py-4 text-center">
             <h2 class="display-6 fw-bold pb-2">Features</h2>
             <div class="col-lg-6 mx-auto">
@@ -87,7 +87,7 @@
             <h2 class="display-6 fw-bold pb-2">Download the extension</h2>
             <p class="lead mb-4 text-black-50">We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to prioritize.</p>
           </div>
-          <div class="col-9">
+          <div class="col-10">
             <div class="row">
               <div class="col-sm-4">
                 <div class="card d-flex align-items-center pt-4 shadow border-0 text-center">
@@ -96,29 +96,29 @@
                     <h3 class="card-title">Add to Chrome</h3>
                     <p class="card-text text-black-50"><small>Minimum version 62</small></p>
                     <img src="img/bg-dots.svg" class="img-fluid">
-                    <button type="button" class="btn btn-primary shadow btn-lg">Add & Install Extenstion</button>
+                    <button type="button" class="btn btn-primary shadow btn-lg mt-2">Add & Install Extenstion</button>
                   </div>
                 </div>
               </div>
               <div class="col-sm-4 pt-3">
                 <div class="card d-flex align-items-center pt-4 shadow border-0 text-center">
-                  <img src="img/logo-chrome.svg" class="card-img-top w-25" alt="Chrome Browser">
+                  <img src="img/logo-firefox.svg" class="card-img-top w-25" alt="Chrome Browser">
                   <div class="card-body">
-                    <h3 class="card-title">Add to Chrome</h3>
+                    <h3 class="card-title">Add to Firefox</h3>
                     <p class="card-text text-black-50"><small>Minimum version 62</small></p>
                     <img src="img/bg-dots.svg" class="img-fluid">
-                    <button type="button" class="btn btn-primary shadow btn-lg">Add & Install Extenstion</button>
+                    <button type="button" class="btn btn-primary shadow btn-lg mt-2">Add & Install Extenstion</button>
                   </div>
                 </div>
               </div>
               <div class="col-sm-4 pt-5">
                 <div class="card d-flex align-items-center pt-4 shadow border-0 text-center">
-                  <img src="img/logo-chrome.svg" class="card-img-top w-25" alt="Chrome Browser">
+                  <img src="img/logo-opera.svg" class="card-img-top w-25" alt="Chrome Browser">
                   <div class="card-body">
-                    <h3 class="card-title">Add to Chrome</h3>
+                    <h3 class="card-title">Add to Opera</h3>
                     <p class="card-text text-black-50"><small>Minimum version 62</small></p>
                     <img src="img/bg-dots.svg" class="img-fluid">
-                    <button type="button" class="btn btn-primary shadow btn-lg">Add & Install Extenstion</button>
+                    <button type="button" class="btn btn-primary shadow btn-lg mt-2">Add & Install Extenstion</button>
                   </div>
                 </div>
               </div>
@@ -127,12 +127,65 @@
 
         </div>
 
+        <!-- FAQS -->        
+        <div class="row d-flex flex-wrap justify-content-center ">
+          <div class="col-6">
+            <div class="row row-cols-1 d-flex flex-wrap justify-content-center pb-5">
+              <div class="col px-4 py-4 text-center">
+                <h2 class="display-6 fw-bold pb-2">Frequently Asked Questions</h2>
+                <p class="lead mb-4 text-black-50">Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.</p>
+              </div>
+              <div class="col accordion" id="accordionExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                      Accordion Item #1
+                    </button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Accordion Item #2
+                    </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      Accordion Item #3
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col px-4 py-4 text-center">
+                <button type="button" class="btn btn-primary shadow">More Info</button>
+              </div>
+            </div>
+          </div>
+        </div>        
+
   </div>
 
     <!-- Bootstrap JavaScript -->
     <!-- <script src="./node_modules/bootstrap/js/dist/*.js"></script>  -->
-<!--     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
- -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     
 </body>
 </html>
