added banner form

--- a/nivell1/index.html
+++ b/nivell1/index.html
@@ -8,42 +8,49 @@
     <title>Sprint 2</title>
 </head>
 <body>
-  <div class="container">
+  <div class="container-flex">
         <!-- Header -->
-        <header class="d-flex flex-wrap justify-content-center py-4">
-            <a class="navbar-brand d-flex align-items-center mb-3 mb-md-0 me-md-auto" href="#">
-                <img src="img/logo-bookmark.svg" alt="logo bookmark">
-            </a>
+        <div class="row d-flex flex-wrap justify-content-center py-5 mt-5">
+          <header class="col-10 d-flex flex-wrap justify-content-center">
+              <a class="navbar-brand d-flex align-items-center mb-3 mb-md-0 me-md-auto" href="#">
+                  <img src="img/logo-bookmark.svg" alt="logo bookmark">
+              </a>
 
-            <nav class="navbar navbar-expand-lg d-flex justify-content-end">
-                <ul class="nav nav-pills text-uppercase">
-                    <li class="nav-item mx-3"><a href="#" class="nav-link text-dark">Features</a></li>
-                    <li class="nav-item mx-3"><a href="#" class="nav-link text-dark">Pricing</a></li>
-                    <li class="nav-item mx-3"><a href="#" class="nav-link text-dark">Contact</a></li>
-                    <li class="nav-item mx-3"><a href="#" class="nav-link text-light bg-secondary px-5">Login</a></li>
-                </ul>
-            </nav>
-        </header>
+              <nav class="navbar navbar-expand-lg d-flex justify-content-end">
+                  <ul class="nav nav-pills text-uppercase">
+                      <li class="nav-item mx-3"><a href="#" class="nav-link text-dark">Features</a></li>
+                      <li class="nav-item mx-3"><a href="#" class="nav-link text-dark">Pricing</a></li>
+                      <li class="nav-item mx-3"><a href="#" class="nav-link text-dark">Contact</a></li>
+                      <li class="nav-item mx-3"><a href="#" class="nav-link text-light bg-secondary px-5">Login</a></li>
+                  </ul>
+              </nav>
+          </header>
+        </div>
 
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-          <div class="col-10 col-sm-8 col-lg-7">
-            <img src="img/illustration-hero.svg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
-          </div>
-          <div class="col-lg-5">
-            <h1 class="lh-1 mb-4">A Simple Bookmark Manager</h1>
-            <p class="lead mb-4 text-black-50">A clean and simple interface to organize your favorite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button type="button" class="btn btn-primary btn-shadow btn-lg btn-padding px-4 me-md-2">Get in on Chrome</button>
-              <button type="button" class="btn btn-light btn-shadow btn-lg btn-padding px-4">Get in on Firefox</button>
+        <!-- Hero -->
+        <div class="row d-flex flex-wrap justify-content-center">
+          <div class="col-10">
+            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+              <div class="col-10 col-sm-8 col-lg-7">
+                <img src="img/illustration-hero.svg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+              </div>
+              <div class="col-lg-5">
+                <h1 class="lh-1 mb-4">A Simple Bookmark Manager</h1>
+                <p class="lead mb-4 text-black-50">A clean and simple interface to organize your favorite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                  <button type="button" class="btn btn-primary btn-shadow btn-lg btn-padding px-4 me-md-2">Get in on Chrome</button>
+                  <button type="button" class="btn btn-light btn-shadow btn-lg btn-padding px-4">Get in on Firefox</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
 
         <!-- Features -->
-        <div class="row d-flex flex-wrap justify-content-center">
+        <div class="row d-flex flex-wrap justify-content-center py-5">
           <div class="col-9">
             <div class="row row-cols-1 d-flex flex-wrap justify-content-center">
-              <div class="col-8 px-4 py-4 text-center">
+              <div class="col-6 px-4 py-4 text-center">
                 <h2 class="pb-2">Features</h2>
                 <p class="lead mb-4 text-black-50">Our aim is to make it quickly and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
               </div>
@@ -51,21 +58,21 @@
           </div>
           <div class="col-9">
             <ul class="nav nav-tabs d-flex flex-wrap justify-content-center" id="myTab" role="tablist">
-                  <li class="nav-item grey-border" role="presentation">
+                  <li class="nav-item grey-border-b" role="presentation">
                     <button class="nav-link active p-4" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Simple Bookmarking</button>
                   </li>
-                  <li class="nav-item grey-border" role="presentation">
+                  <li class="nav-item grey-border-b" role="presentation">
                     <button class="nav-link p-4" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Speedy Searching</button>
                   </li>
-                  <li class="nav-item grey-border" role="presentation">
+                  <li class="nav-item grey-border-b" role="presentation">
                     <button class="nav-link p-4" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Easy Sharing</button>
                   </li>
             </ul>
           </div>
-          <div class="col-12">
+          <div class="col-9">
             <div class="row tab-content" id="myTabContent">
               <div class="col p-5">
-                <!-- Features Content 1 -->
+                <!-- Content 1 -->
                 <div class="row tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                   <div class="col-7 px-5">
                     <img src="img/illustration-features-tab-1.svg" class="d-block mx-lg-auto img-fluid" loading="lazy">
@@ -80,7 +87,7 @@
                   
                 </div>
 
-                <!-- Features Content 2 -->            
+                <!-- Content 2 -->            
                 <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">02 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, magni?</div>
                 <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">03 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam iusto animi et quia nihil at voluptatem mollitia dolorem ad quas harum dolorum architecto qui voluptas praesentium reprehenderit impedit, dolore facere?</div>
               </div>
@@ -89,14 +96,14 @@
         </div> 
 
         <!-- Download -->
-        <div class="row d-flex flex-wrap justify-content-center">
+        <div class="row d-flex flex-wrap justify-content-center py-5">
           <div class="col-9">
             <div class="row row-cols-1 d-flex flex-wrap justify-content-center pb-5">
-              <div class="col-8 px-4 py-4 text-center">
+              <div class="col-6 px-4 py-4 text-center">
                 <h2 class="pb-2">Download the extension</h2>
                 <p class="lead mb-4 text-black-50">We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to prioritize.</p>
               </div>
-              <div class="col">
+              <div class="col-10">
                 <div class="row">
                   <div class="col-sm-4">
                     <div class="card card-border d-flex align-items-center pt-4 cards-shadow border-0 text-center">
@@ -151,58 +158,86 @@
         </div> 
 
         <!-- FAQS -->        
-        <div class="row d-flex flex-wrap justify-content-center">
-          <div class="col-6">
+        <div class="row d-flex flex-wrap justify-content-center py-5">
+          <div class="col-4">
             <div class="row row-cols-1 d-flex flex-wrap justify-content-center pb-5">
               <div class="col px-4 py-4 text-center">
                 <h2 class="pb-2">Frequently Asked Questions</h2>
                 <p class="lead mb-4 text-black-50">Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.</p>
               </div>
-              <div class="col accordion" id="accordionExample">
+              <div class="col accordion mb-4" id="accordionExample">
                 <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingOne">
+                  <h2 class="accordion-header grey-border-t" id="headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                      Accordion Item #1
+                      What is Bookmark?
                     </button>
                   </h2>
                   <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      <p class="text-black-50">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum fugit rem porro odio magni voluptates tenetur perspiciatis eveniet molestias enim amet dolor quod error, debitis totam accusantium nihil, asperiores nesciunt consectetur, id non eaque blanditiis. Et adipisci obcaecati assumenda. Fugiat reprehenderit ab delectus architecto debitis libero repellat facilis ipsum autem.</p>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingTwo">
+                  <h2 class="accordion-header grey-border-t" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Accordion Item #2
+                      How can I request a new Browser?
                     </button>
                   </h2>
                   <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      <p class="text-black-50">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum fugit rem porro odio magni voluptates tenetur perspiciatis eveniet molestias enim amet dolor quod error, debitis totam accusantium nihil, asperiores nesciunt consectetur, id non eaque blanditiis. Et adipisci obcaecati assumenda. Fugiat reprehenderit ab delectus architecto debitis libero repellat facilis ipsum autem.</p>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingThree">
+                  <h2 class="accordion-header grey-border-t" id="headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      Accordion Item #3
+                      Is there a mobile app?
                     </button>
                   </h2>
                   <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      <p class="text-black-50">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum fugit rem porro odio magni voluptates tenetur perspiciatis eveniet molestias enim amet dolor quod error, debitis totam accusantium nihil, asperiores nesciunt consectetur, id non eaque blanditiis. Et adipisci obcaecati assumenda. Fugiat reprehenderit ab delectus architecto debitis libero repellat facilis ipsum autem.</p>
                     </div>
                   </div>
                 </div>
-              </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header grey-border-t grey-border-b" id="headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                      What about other Chromium Browsers?
+                    </button>
+                  </h2>
+                  <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <p class="text-black-50">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum fugit rem porro odio magni voluptates tenetur perspiciatis eveniet molestias enim amet dolor quod error, debitis totam accusantium nihil, asperiores nesciunt consectetur, id non eaque blanditiis. Et adipisci obcaecati assumenda. Fugiat reprehenderit ab delectus architecto debitis libero repellat facilis ipsum autem.</p>
+                    </div>
+                  </div>
+                </div>
+             </div>
               <div class="col px-4 py-4 text-center">
                 <button type="button" class="btn btn-primary btn-shadow btn-padding">More Info</button>
               </div>
             </div>
           </div>
-        </div>        
-
+        </div>
+        
+        <!-- BANNER -->        
+        <div class="row bg-primary d-flex flex-wrap justify-content-center p-5 mb-4">
+          <div class="col-5 text-center">
+            <p class="lead text-uppercase lettering text-white">35,000+ already joined</p>
+            <h2 class="fs-3 text-white py-3">Stay up-to-date with what we're doing</h2>
+            <form class="row pt-2 needs-validation">
+              <div class="col-8 d-flex">
+                <input type="text" class="form-control btn-padding" placeholder="Enter your email address" aria-label="User Email" id="validationCustom01" required>
+                <div class="invalid-feedback">Whoops, make sure it's an email</div>
+              </div>
+              <div class="col-4 d-flex">
+                <button class="btn btn-secondary btn-lg text-white" type="submit">Contact Us</button>
+              </div>
+            </form>
+          </div>
+        </div>
   </div>
 
     <!-- Bootstrap JavaScript -->
