--- a/nivell1/index.html
+++ b/nivell1/index.html
@@ -8,10 +8,10 @@
     <title>Sprint 2</title>
 </head>
 <body>
-  <div class="container-flex">
+  <div class="container-flex nopadding">
         <!-- Header -->
-        <div class="row d-flex flex-wrap justify-content-center py-5">
-          <header class="col col-lg-9 d-flex flex-wrap justify-content-center flex-spacebetween">
+        <div class="row d-flex flex-wrap justify-content-center py-4 nopadding">
+          <header class="col col-lg-9 d-flex flex-wrap justify-content-between justify-content-lg-center">
               <a class="navbar-brand d-flex align-items-center me-md-auto" href="#">
                   <img src="img/logo-bookmark.svg" alt="logo bookmark">
               </a>
@@ -36,20 +36,19 @@
         </div>
 
         <!-- Hero -->
-        <div class="row d-flex flex-wrap justify-content-center">
+        <div class="row d-flex flex-wrap justify-content-center nopadding">
           <div class="col">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5 ms-lg-5 ps-lg-5">
-              <div class="col-10 col-sm-8 col-lg-7 img-move-wrapper d-block">
+              <div class="col-10 col-lg-7 img-move-wrapper d-block fullwidth">
                 <img src="img/pill.svg" class="img-move img-move-1 img-fluid" loading="lazy" role="presentation">
-                <img src="img/illustration-hero.svg" class="img-move img-move-2 img-fluid" alt="Bootstrap Themes" loading="lazy">
-<!--                 <img src="img/illustration-hero.svg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">-->              
+                <img src="img/illustration-hero.svg" class="img-move img-move-2 img-fluid" alt="Bootstrap Themes" loading="lazy">           
               </div>
-              <div class="col-lg-5 px-5">
-                <h1 class="lh-2 mb-4">A Simple Bookmark Manager</h1>
+              <div class="col-lg-5 px-5 text-center text-lg-start">
+                <h1 class="fw-bolder fs-1 lh-2 mb-4">A Simple Bookmark Manager</h1>
                 <p class="mb-4 text-black-50">A clean and simple interface to organize your favorite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <button type="button" class="btn btn-primary btn-shadow btn-lg btn-padding px-4 me-md-2">Get in on Chrome</button>
-                  <button type="button" class="btn btn-light btn-shadow btn-lg btn-padding px-4">Get in on Firefox</button>
+                <div class="d-block gap-3 d-flex justify-content-center justify-content-lg-start">
+                  <button type="button" class="btn btn-primary btn-shadow btn-lg py-3">Get in on Chrome</button>
+                  <button type="button" class="btn btn-light btn-shadow btn-lg py-3">Get in on Firefox</button>
                 </div>
               </div>
             </div>
@@ -58,28 +57,28 @@
 
         <!-- Features -->
         <div class="row d-flex flex-wrap justify-content-center py-5">
-          <div class="col-9">
+          <div class="col-12 col-lg-9">
             <div class="row row-cols-1 d-flex flex-wrap justify-content-center">
-              <div class="col-6 px-4 py-4 text-center">
-                <h2 class="pb-2">Features</h2>
-                <p class="lead mb-4 text-black-50">Our aim is to make it quickly and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
+              <div class="col col-lg-7 p-5 text-center">
+                <h2 class="fw-bolder pb-2">Features</h2>
+                <p class="mb-4 text-black-50">Our aim is to make it quickly and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
               </div>
             </div>
           </div>
-          <div class="col-9">
-            <ul class="nav nav-tabs d-flex flex-wrap justify-content-center" id="myTab" role="tablist">
-                  <li class="nav-item grey-border-b" role="presentation">
+          <div class="col-12 col-lg-9">
+            <ul class="nav nav-tabs d-flex flex-wrap justify-content-center px-5" id="myTab" role="tablist">
+                  <li class="nav-item grey-border-b fullwidth d-flex flex-wrap justify-content-center" role="presentation">
                     <button class="nav-link active p-4" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Simple Bookmarking</button>
                   </li>
-                  <li class="nav-item grey-border-b" role="presentation">
+                  <li class="nav-item grey-border-b fullwidth d-flex flex-wrap justify-content-center" role="presentation">
                     <button class="nav-link p-4" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Speedy Searching</button>
                   </li>
-                  <li class="nav-item grey-border-b" role="presentation">
+                  <li class="nav-item grey-border-b fullwidth d-flex flex-wrap justify-content-center" role="presentation">
                     <button class="nav-link p-4" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Easy Sharing</button>
                   </li>
             </ul>
           </div>
-          <div class="col-9">
+          <div class="col-12 col-lg-9">
             <div class="row tab-content" id="myTabContent">
               <div class="col p-5">
                 <!-- Content 1 -->
@@ -87,9 +86,9 @@
                   <div class="col-7 px-5">
                     <img src="img/illustration-features-tab-1.svg" class="d-block mx-lg-auto img-fluid" loading="lazy">
                   </div>
-                  <div class="col-5 pt-5 ps-5">
-                    <h2 class="lh-1 mb-4">Bookmark in one click</h2>
-                    <p class="lead mb-4 text-black-50">Organize your bookmarks however you like. Our simple drag and drop interface gives you complete control over how you manage your favourite sites.</p>
+                  <div class="col-5 pt-4 ps-5">
+                    <h3 class="fw-bolder fs-2 lh-1 mb-4">Bookmark in one click</h3>
+                    <p class="mb-4 text-black-50">Organize your bookmarks however you like. Our simple drag and drop interface gives you complete control over how you manage your favourite sites.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                       <button type="button" class="btn btn-primary btn-shadow btn-lg btn-padding px-4 me-md-2">More Info</button>
                     </div>
@@ -110,8 +109,8 @@
           <div class="col-9">
             <div class="row row-cols-1 d-flex flex-wrap justify-content-center pb-5">
               <div class="col-6 px-4 py-4 text-center">
-                <h2 class="pb-2">Download the extension</h2>
-                <p class="lead mb-4 text-black-50">We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to prioritize.</p>
+                <h2 class="fw-bolder pb-2">Download the extension</h2>
+                <p class="mb-4 text-black-50">We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to prioritize.</p>
               </div>
               <div class="col-10">
                 <div class="row">
@@ -172,8 +171,8 @@
           <div class="col-4">
             <div class="row row-cols-1 d-flex flex-wrap justify-content-center pb-5">
               <div class="col px-4 py-4 text-center">
-                <h2 class="pb-2">Frequently Asked Questions</h2>
-                <p class="lead mb-4 text-black-50">Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.</p>
+                <h2 class="fw-bolder pb-2">Frequently Asked Questions</h2>
+                <p class="mb-4 text-black-50">Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.</p>
               </div>
               <div class="col accordion mb-4" id="accordionExample">
                 <div class="accordion-item">
